<resources>
    <string name="app_name">MyCE</string>
    <string name="first_name">First Name</string>
    <string name="last_lame">Last Name</string>
    <string name="position">Position</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="employees">EMPLOYEES</string>
    <string name="employee">EMPLOYEE</string>
    <string name="x">x</string>
    <string name="facebook_app_id">691882634301272</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="or">Or</string>
</resources>
