<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:isScrollContainer="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/rFName"
            android:hint="@string/first_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:inputType="textPersonName|textCapWords"/>

        <EditText
            android:id="@+id/rLName"
            android:hint="@string/last_lame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:inputType="textPersonName|textCapWords"/>

        <EditText
            android:id="@+id/rEmail"
            android:hint="@string/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/rPosition"
            android:hint="@string/position"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/rPassword"
            android:hint="@string/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/rCPassword"
            android:hint="@string/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/rRegister"
            android:text="@string/register"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_button"
            android:drawableLeft="@mipmap/ic_border_color_black_18dp"
            android:drawableStart="@mipmap/ic_border_color_black_18dp"/>
    </LinearLayout>
</ScrollView>