<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/employee"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:gravity="start"/>

        <TextView
            android:id="@+id/add_close"
            android:text="@string/x"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_first_name"
                android:hint="@string/first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:inputType="textPersonName|textCapWords"/>

            <EditText
                android:id="@+id/add_last_name"
                android:hint="@string/last_lame"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:inputType="textPersonName|textCapWords"/>

            <EditText
                android:id="@+id/add_email"
                android:hint="@string/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/add_position"
                android:hint="@string/position"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/add_button"
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_button"
                android:drawableStart="@mipmap/ic_person_add_black_18dp"
                android:drawableLeft="@mipmap/ic_person_add_black_18dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
