<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:isScrollContainer="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/login_email"
            android:hint="@string/email"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            style="@style/custom_edit_text"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/login_password"
            android:hint="@string/password"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            style="@style/custom_edit_text"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_button"
            android:text="@string/login"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            style="@style/custom_button_style"
            android:drawableLeft="@mipmap/ic_vpn_key_black_18dp"
            android:drawableStart="@mipmap/ic_vpn_key_black_18dp"/>

        <TextView
            android:text="@string/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginTop="5dp"/>

        <!--<Button-->
            <!--android:id="@+id/facebook_login_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="45dp"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--style="@style/facebook_login_button"/>-->

        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/facebook_login_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:paddingRight="10dp"-->
            <!--facebook:theme="@style/facebook_login_button"-->
            <!--/>-->


        <TextView
            android:id="@+id/login_register"
            android:text="@string/register"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical|center_horizontal"/>

    </LinearLayout>
</ScrollView>